# netcode-demo

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  netcode-demo.sln  vcpkg.json
.github/workflows/: build.yml  ci.yml
client/: client.cpp  client.vcxproj  client.vcxproj.filters  interpolation.cpp  prediction.cpp
clientTests/: clientTests.cpp  clientTests.vcxproj  clientTests.vcxproj.filters
docs/: README_8md.html  all_12.js  all_14.js  all_17.js  all_3.js  all_5.js  all_8.js  all_c.js  all_d.js  all_e.js  annotated.html  annotated_dup.js  classDelaySimulator-members.html  classDelaySimulator.html  classDelaySimulator.js  classThreadSafeQueue-members.html  classThreadSafeQueue.html  classThreadSafeQueue.js  classTrail-members.html  classTrail.html  classes.html  classes_1.js  classes_3.js  client_8cpp.html  client_8cpp.js  client_8cpp_source.html  defines_0.js  dir_075bb3ff235063c77951cd176d15a741.html  dir_23dd6521bd5685952b5cfd54359ce207.js  dir_6908ff505388a07996d238c763adbdab.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fdedb0aba14d44ce9d99bc100e026e6a.html  dir_fdedb0aba14d44ce9d99bc100e026e6a.js  doxygen.css  doxygen_crawl.html  files.html  functions.html  functions_4.js  functions_6.js  functions_9.js  (+39 more)
docs/api/html/: annotated_dup.js  classDelaySimulator-members.html  classDelaySimulator.html  classPredictionSystem-members.html  classPredictionSystem.html  classPredictionSystem.js  classTrail-members.html  classTrail.html  classTrail.js  client_8cpp.html  client_8cpp.js  dir_041761c33e9a56f1fd0b736a2dd65851.html  dir_041761c33e9a56f1fd0b736a2dd65851.js  dir_23dd6521bd5685952b5cfd54359ce207.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6908ff505388a07996d238c763adbdab.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_fdedb0aba14d44ce9d99bc100e026e6a.html  files.html  functions_func.html  globals.html  globals_defs.html  globals_type.html  index.html  index.js  interpolation_8cpp.html  interpolation_8cpp.js  interpolation_8cpp_source.html  interpolation_8hpp.html  interpolation_8hpp.js  interpolation_8hpp_source.html  menudata.js  navtreedata.js  packet_8hpp.html  packet_8hpp.js  prediction_8cpp_source.html  prediction_8hpp.html  prediction_8hpp_source.html  structDelayedPacket.html  structInputCommand-members.html  (+5 more)
docs/api/html/search/: all_0.js  all_1.js  all_11.js  all_13.js  all_15.js  all_16.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_b.js  pages_11.js  pages_12.js  pages_13.js  pages_4.js  pages_6.js  pages_9.js  pages_f.js  searchdata.js  variables_0.js  variables_1.js  (+6 more)
github/workflows/: build.yml
include/: interpolation.hpp  packet.hpp  prediction.hpp
include/netcode/common/: input.hpp  interpolation.hpp  packet.hpp  prediction.hpp
server/: server.cpp  server.vcxproj
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp
src/common/: CMakeLists.txt  interpolation.cpp  prediction.cpp
src/server/: CMakeLists.txt  server.cpp
tests/: CMakeLists.txt
tests/PacketTests/: PacketTests.cpp  PacketTests.vcxproj  PacketTests.vcxproj.filters
tests/client/: client_tests.cpp  interpolation_tests.cpp  prediction_tests.cpp
tests/common/: integration_tests.cpp  packet_tests.cpp
tests/server/: server_tests.cpp
tests/tests/: PacketTests.vcxproj  PacketTests.vcxproj.filters  cpp.hint  packetTests.cpp  tests.vcxproj  tests.vcxproj.filters  tests_main.cpp
